add agent and task

--- a/src/curriculum_test/config/agents.yaml
+++ b/src/curriculum_test/config/agents.yaml
@@ -19,21 +19,21 @@ subject_matter_expert:
     Transform the lesson outline into comprehensive, engaging learning content. Create detailed lesson materials
     including:
     - Clear explanations of key concepts that facilitate effective knowledge checks through discussion or chat.
-    - Practical examples that resonate with {persona}.
+    - Practical examples that resonate with {learner_persona}.
     - Interactive activities that align with {learning_objectives}.
     - Content that supports verifying understanding through varied formative assessments and encourages reflection
       on practical application.
   backstory: >
-    You're an expert content creator with deep subject matter expertise in {topic}. Your specialty is breaking down
+    You're an expert content creator with deep subject matter expertise in {module_topic}. Your specialty is breaking down
     complex topics into digestible, engaging content that meets learners where they are.
 
 learning_experience_designer:
   role: Learning Experience Designer
   goal: >
     Transform technical content into captivating learning experiences by:
-    - Creating interactive elements that resonate with {persona}.
+    - Creating interactive elements that resonate with {learner_persona}.
     - Strategically embedding opportunities for flexible knowledge checks (discussion, chat) that resonate with
-      {persona}.
+      {learner_persona}.
     - Implementing storytelling and narrative techniques that make content memorable.
     - Optimizing the use of {tools} for maximum engagement.
     - Designing interactive elements that facilitate effective live reviews of activity solutions for
@@ -45,15 +45,15 @@ learning_experience_designer:
   backstory: >
     You're a creative learning experience specialist who transforms ordinary lesson content into extraordinary
     learning journeys. With extensive experience in instructional design psychology, you understand how to create
-    "aha moments" and emotional connections to content. Your expertise lies in making complex {topic} material not
-    just understandable but genuinely engaging and memorable for {persona}.
+    "aha moments" and emotional connections to content. Your expertise lies in making complex {module_topic} material not
+    just understandable but genuinely engaging and memorable for {learner_persona}.
 
 curriculum_quality_assurance_expert:
   role: Curriculum Quality Assurance Expert
   goal: >
     Review and refine the complete lesson to ensure:
     - Perfect alignment with {learning_objectives}.
-    - Appropriate difficulty and pacing for {persona}.
+    - Appropriate difficulty and pacing for {learner_persona}.
     - Realistic timeline within {minutes} constraints.
     - Clear integration of flexible knowledge checks (discussion, chat) to verify understanding.
     - Effective opportunities for live review of activity solutions in technical courses.
