--- a/src/curriculum_test/config/tasks.yaml
+++ b/src/curriculum_test/config/tasks.yaml
@@ -2,79 +2,68 @@ generate_module_outline:
   agent: instructional_architect
   description: >
     As the Senior Instructional Architect, your primary task is to generate a detailed module outline for a
-    technical (with coding) or non-technical module. You must follow the provided "Outline Structure & Content
-    Guidelines" meticulously. This includes creating sections for the Instructor Read-Only Overview & Agenda,
+    technical (with coding) or non-technical module.
+    This includes creating sections for the Instructor Read-Only Overview & Agenda,
     Learner Persona and Prerequisites, High-Level and Detailed Learning Objectives, individual Microlesson
-    structures (Title, Learning Objective, Theory, Activity, Instructor Speaker Notes & Knowledge Checks),
-    Assessment and Evaluation Strategies, and Resources and Supplementary Materials.
+    structures (Title, Learning Objective, Theory, Activity).
 
-    Your process should involve the following steps, informed by the "List of Questions to Prompt the User for
-    Necessary Information" and the provided {module_topic} and {learner_persona}:
+    Your process should involve the following steps, informed by the provided {module_topic} and {learner_persona}:
 
-    1.  **Generate Module Title:** Based on the {module_topic}, create a clear and engaging title for the module.
+    1.  Define Module Title: Use the provided {module_title}.
 
-    2.  **Gather and Infer Necessary Information:** Identify the key pieces of information required to create a
-        comprehensive outline by referencing the provided list of questions. Utilize the provided
-        {module_topic} and {learner_persona} to infer relevant details, such as potential prerequisites,
-        learning preferences, and real-world applications. You may also need to consider other provided variables
-        like {learning_objectives} if available.
+    2.  Analyze Inputs and Infer Context:
+            - Review the provided {module_topic}, {learner_persona}, and any {learning_objectives}. 
+        From these, infer:
+            - Appropriate technical or domain prerequisites
+            - Learner motivations, goals, and challenges
+            - Real-world contexts and examples relevant to the topic
 
-    3.  **Determine Microlesson Titles and Content Focus:** Based on the {module_topic} and the inferred needs of
-        the {learner_persona}, determine the appropriate number of microlessons and generate descriptive and
-        logical titles for each. For each microlesson, outline the key theoretical concepts to be covered and
-        brainstorm engaging and remote-friendly hands-on activities. Consider how these activities can be
-        facilitated (e.g., via VS Code, online whiteboards).
+    3. Design Microlesson Structure:
+            - Determine the number and sequence of microlessons based on number of {learning_objectives} provided. 
+        For each microlesson:
+            -Create a concise title
+            -Outline key theoretical concepts to be introduced
+            -Design a practical, engaging, and contextually appropriate activity
+            -Include a method for learners to check their understanding (e.g., a multiple-choice question, coding prompt, or reflection)
 
-    4.  **Structure the Outline:** Organize the generated and inferred content according to the "Outline Structure
-        & Content Guidelines," ensuring all sections are included and logically ordered.
+    4. Populate the Outline with Clear, Industry-Relevant Content:
+            - For each microlesson, provide a detailed overview of the key topics to be covered. 
+        These topics should be:
+            - Directly aligned with the microlesson’s learning objective
+            - Drawn from current industry practices, tools, and knowledge
+            - Selected to build progressively toward the overall module goal
+            - Use descriptive subsection names that reflect the actual content (e.g., “Model Evaluation Metrics” or “Using Git Branches”), rather than generic structural labels like “Theory” or “Activity.”
+            - Include estimated time durations for each microlesson. These estimates should reflect realistic pacing for remote or hybrid delivery, keeping {learner_persona} in mind, including time for guided practice and learner interaction.
+            - Ensure each microlesson balances conceptual understanding and practical application, tied clearly to industry-relevant skills and tasks.
 
-    5.  **Populate Each Section:** Fill each section with relevant and detailed information. Pay close attention to
-        the specific requirements for each subsection (e.g., formatting of learning objectives, inclusion of time
-        estimates for microlessons, specifying deliverables for activities, etc.).
-
-    6.  **Incorporate Best Practices:** Ensure the outline reflects the best practices outlined, such as emphasizing
-        clear learning objectives, concise theory, engaging hands-on activities, and flexible Knowledge Checks. For
-        technical modules (inferred from the {module_topic}), remember to consider elements like potential VS Code
-        demos and coding examples.
-
-    7.  **Consider Customization:** Be mindful of whether the module is likely technical or non-technical (based on
-        the {module_topic}) and adjust the "Activity" and "Theory" sections accordingly.
-
-    Use the example provided ("Module Outline: Introduction to JavaScript Arrays") as a template for technical
-    modules to ensure the inclusion of relevant elements.
+    5. Embed Best Practices:
+        - Ensure alignment with GA's adult learning theory as outlined in "general_assembly_learning_philosophy" and curriculum design best practices
+        - Keep theory concise and actionable
+        - Make activities highly relevant and tool-aligned with {tools}.
+        - Ensure accessibility for remote learners
 
   expected_output: >
-    A comprehensive module outline in Markdown format, structured according to the provided "Outline Structure &
-    Content Guidelines." The outline should include the following sections with detailed content:
+    A comprehensive module outline in Markdown format, structured according to the following. 
+    The outline should include the following sections with detailed content:
 
     -   **Instructor Read-Only Overview & Agenda:**
         -   Overview: A brief summary of the module's purpose and structure.
         -   Agenda: A list of **generated** microlesson titles with estimated times in "[ ]".
+        -   Required Tools: List of necessary software as defined in {tools}.
     -   **Learner Persona and Prerequisites:**
         -   Learner Persona: A description of the target audience (using the provided {learner_persona}).
-        -   Prerequisites: A list of required skills or knowledge (inferred based on {module_topic} and
+        -   Prerequisites: A list of required skills or knowledge (based on {module_topic} and
             {learner_persona}).
     -   **Learning Objectives and Outcomes:**
         -   High-Level Learning Goal: A sentence stating the module's main purpose (generated based on
             {module_topic}).
-        -   Detailed Learning Objectives: A bulleted list of "Learners will be able to..." statements (to be
-            defined in subsequent tasks, but the outline should indicate where these will go).
+        -   Detailed Learning Objectives: A bulleted list of provided {learning_objectives}
     -   **Module Structure: Microlessons:**
         -   For each **generated** microlesson:
-            -   Title: With estimated time in "[ ]".
-            -   Learning Objective: A placeholder "To be defined" or a very high-level objective related to the title.
+            -   Title: With estimated time in "[ ]". For example : "Introduction to APIs [15 min]"
+            -   Learning Objective
             -   Theory: A brief outline of the key concepts.
-            -   Activity: A preliminary idea for a hands-on exercise, deliverable, and a potential Discussion Prompt.
-            -   Instructor Speaker Notes & Knowledge Checks: Initial thoughts on instructor guidance.
-    -   **Assessment and Evaluation Strategies:**
-        -   Description of formative assessments (Knowledge Checks via chat, live VS Code reviews - if applicable).
-        -   Explanation of the module debrief and reflection session.
-    -   **Resources and Supplementary Materials:**
-        -   Required Tools: List of necessary software (inferred if possible).
-        -   Supplementary Materials: Initial ideas for relevant resources.
-
-    The outline should be well-organized and provide a foundational structure for developing the module content, with
-    generated titles and preliminary content ideas based on the provided {module_topic} and {learner_persona}.
+            -   Activity: A preliminary idea for a hands-on exercises or discussion.
 
 develop_microlesson_content:
   agent: subject_matter_expert
@@ -128,7 +117,6 @@ develop_microlesson_content:
 
     The final Markdown output must represent complete, accurate, and engaging instructional content for the core
     microlesson sections, fully aligned with the {module_topic}, {learner_persona}, and {learning_objectives}.
-
 
 enhance_microlesson_engagement:
   agent: learning_experience_designer
