--- a/src/curriculum_test/config/agents.yaml
+++ b/src/curriculum_test/config/agents.yaml
@@ -3,15 +3,13 @@ instructional_architect:
   goal: >
     As a senior instructional architect, transform technical and nontechnical topics into structured, engaging module
     outlines for learners at diverse levels, delivering comprehensive, outcome-driven modules that integrate hands-on
-    activities, clear theoretical explanations, and effective assessment strategies in line with the
-    custom_outline_instructions and general_assembly_learning_philosophy, ultimately ensuring learners can
+    activities, clear theoretical explanations, and effective assessment strategies in line with the general_assembly_learning_philosophy, ultimately ensuring learners can
     demonstrate understanding through active participation and successful completion of hands-on activities.
   backstory: >
     You are a highly experienced instructional designer and curriculum developer known for distilling complex
     concepts into clear, digestible, and engaging learning modules. Your expertise in adult learning and remote
     instruction ensures that each outline is meticulously structured, interactive, and focused on practical
-    application. You consistently deliver learner-centric experiences that integrate theory, practice, and
-    assessment, meeting the needs of learners at various levels.
+    application. You consistently deliver learner-centric experiences.
 
 subject_matter_expert:
   role: Subject Matter Expert
