--- a/src/curriculum_test/config/tasks.yaml
+++ b/src/curriculum_test/config/tasks.yaml
@@ -1,83 +1,107 @@
 generate_module_outline:
   agent: instructional_architect
+  output_file: output/module-outline.md
   description: >
-    As the Senior Instructional Architect, your primary task is to generate a detailed module outline for a
-    technical (with coding) or non-technical module.
-    This includes creating sections for the Instructor Read-Only Overview & Agenda,
-    Learner Persona and Prerequisites, High-Level and Detailed Learning Objectives, individual Microlesson
-    structures (Title, Learning Objective, Theory, Activity).
+    As the Senior Instructional Architect, your primary task is to generate a 
+    detailed module outline for a technical (with coding) or non-technical 
+    module. This includes creating sections for the instructor overview and 
+    agenda, learner persona and prerequisites, and individual microlesson
+    structures (title, learning objective, and an overview of the microlesson's 
+    content).
 
-    Your process should involve the following steps, informed by the provided {module_topic} and {learner_persona}:
+    Your process should involve the following steps, informed by the provided 
+    {module_topic} and {learner_persona}:
 
     1.  Define Module Title: Use the provided {module_title}.
 
     2.  Analyze Inputs and Infer Context:
-            - Review the provided {module_topic}, {learner_persona}, and any {learning_objectives}. 
-        From these, infer:
-            - Appropriate technical or domain prerequisites
-            - Learner motivations, goals, and challenges
-            - Real-world contexts and examples relevant to the topic
+        Review the provided {module_topic}, {learner_persona}, and any 
+        {learning_objectives}. From these, infer:
+        - Appropriate technical or domain prerequisites.
+        - Learner motivations, goals, and challenges.
+        - Real-world contexts and examples relevant to the topic.
 
-    3. Design Microlesson Structure:
-            - Determine the number and sequence of microlessons based on number of {learning_objectives} provided. 
-        For each microlesson:
-            -Create a concise title
-            -Outline key theoretical concepts to be introduced
-            -Design a practical, engaging, and contextually appropriate activity
-            -Include a method for learners to check their understanding (e.g., a multiple-choice question, coding prompt, or reflection)
+    3.  Design Microlesson Structure:
+        Determine the number and sequence of microlessons based on number of 
+        {learning_objectives} provided. For each microlesson:
+        - Create a concise title.
+        - Outline key theoretical concepts to be introduced.
+        - Include a method for learners to check their understanding (e.g., a 
+          multiple-choice question, coding prompt, or reflection).
 
-    4. Populate the Outline with Clear, Industry-Relevant Content:
-            - For each microlesson, provide a detailed overview of the key topics to be covered. 
-        These topics should be:
-            - Directly aligned with the microlesson’s learning objective
-            - Drawn from current industry practices, tools, and knowledge
-            - Selected to build progressively toward the overall module goal
-            - Use descriptive subsection names that reflect the actual content (e.g., “Model Evaluation Metrics” or “Using Git Branches”), rather than generic structural labels like “Theory” or “Activity.”
-            - Include estimated time durations for each microlesson. These estimates should reflect realistic pacing for remote or hybrid delivery, keeping {learner_persona} in mind, including time for guided practice and learner interaction.
-            - Ensure each microlesson balances conceptual understanding and practical application, tied clearly to industry-relevant skills and tasks.
+    4.  Populate the Outline with Clear, Industry-Relevant Content:
+        For each microlesson, provide a detailed overview of the key topics to 
+        be covered. These topics should be:
+        - Directly aligned with the microlesson’s learning objective.
+        - Drawn from current industry practices, tools, and knowledge.
+        - Selected to build progressively toward the overall module goal.
+        - Use descriptive subsection names that reflect the actual content 
+          (e.g., “Model Evaluation Metrics” or “Using Git Branches”), rather 
+          than generic structural labels like "Theory".
+        - Include estimated time durations for each microlesson. These 
+          estimates should reflect realistic pacing for remote or hybrid 
+          delivery, keeping {learner_persona} in mind, including time for 
+          guided practice and learner interaction.
+        - Ensure each microlesson balances conceptual understanding and 
+          practical application, tied clearly to industry-relevant skills and 
+          tasks.
 
-    5. Embed Best Practices:
-        - Ensure alignment with GA's adult learning theory as outlined in "general_assembly_learning_philosophy" and curriculum design best practices
-        - Keep theory concise and actionable
+    5.  Embed Best Practices:
+        Ensure alignment with GA's adult learning theory as outlined in 
+        "general_assembly_learning_philosophy" and curriculum design best 
+        practices including:
+        - Keep theory concise and actionable.
         - Make activities highly relevant and tool-aligned with {tools}.
-        - Ensure accessibility for remote learners
+        - Ensure accessibility for remote learners.
 
   expected_output: >
-    A comprehensive module outline in Markdown format, structured according to the following. 
-    The outline should include the following sections with detailed content:
+    A comprehensive module outline in Markdown format, structured according to 
+    the following:
 
-    -   **Instructor Read-Only Overview & Agenda:**
-        -   Overview: A brief summary of the module's purpose and structure.
-        -   Agenda: A list of **generated** microlesson titles with estimated times in "[ ]".
-        -   Required Tools: List of necessary software as defined in {tools}.
-    -   **Learner Persona and Prerequisites:**
-        -   Learner Persona: A description of the target audience (using the provided {learner_persona}).
-        -   Prerequisites: A list of required skills or knowledge (based on {module_topic} and
-            {learner_persona}).
-    -   **Learning Objectives and Outcomes:**
-        -   High-Level Learning Goal: A sentence stating the module's main purpose (generated based on
-            {module_topic}).
-        -   Detailed Learning Objectives: A bulleted list of provided {learning_objectives}
-    -   **Module Structure: Microlessons:**
-        -   For each **generated** microlesson:
-            -   Title: With estimated time in "[ ]". For example : "Introduction to APIs [15 min]"
-            -   Learning Objective
-            -   Theory: A brief outline of the key concepts.
-            -   Activity: A preliminary idea for a hands-on exercises or discussion.
+    - **Instructor overview and agenda:**
+      - Overview: A brief summary of the module's purpose and structure.
+      - Agenda: A list of **generated** microlesson titles. Include the estimated time it will take to complete each microlesson in "[ ]".
+      - Required Tools: List of necessary software as defined in {tools}.
+    - **Learner Persona and Prerequisites:**
+      - Learner Persona: A description of the target audience (using the 
+        provided {learner_persona}).
+      - Prerequisites: A list of required skills or knowledge (based on 
+        {module_topic} and {learner_persona}).
+    - **Learning Objectives and Outcomes:**
+      - High-Level Learning Goal: A sentence stating the module's main purpose 
+        (generated based on {module_topic}).
+      - Learning Objectives: A bulleted list of provided {learning_objectives}
+    - **Microlessons:**
+      - For each microlesson:
+        - Title: Include the title and add the estimated time in "[ ]". For 
+          example : "Introduction to APIs [15 min]"
+        - Learning Objective
+        - Outline: A brief outline of the key concepts that will be covered in 
+          the microlesson.
 
 develop_microlesson_content:
   agent: subject_matter_expert
   output_file: output/microlesson-content-from-sme.md
   description: >
-    Leveraging your deep expertise in the {module_topic}, take the provided module outline (generated by the
-    instructional_architect) as your primary input. Your core task is to develop comprehensive, accurate, and
-    engaging content for EACH microlesson defined within that outline. For every microlesson specified, you must:
-    1.  **Expand the 'Theory' section:** Provide clear, detailed explanations of the key concepts outlined for
-        that microlesson. Break down complex ideas into digestible parts suitable for the target
-        {learner_persona}. Include relevant examples, code snippets (if applicable to the {module_topic}),
-        diagrams, or analogies to illustrate the concepts effectively. Ensure explanations are structured to
-        facilitate effective knowledge checks.
-    2.  **Refine and Detail the 'Activity' section:** Transform the preliminary activity idea into a fully
+    Leveraging your deep expertise in the {module_topic}, take the provided 
+    module outline (generated by the instructional_architect) as your primary 
+    input. Your core task is to develop comprehensive, accurate, and engaging 
+    content for each microlesson defined within that outline. For every 
+    microlesson specified, you must:
+    1.  **Expand the outlined topics section:** Provide clear, detailed     
+        explanations of the key concepts outlined for that microlesson. Break
+        down complex ideas into digestible parts suitable for the target
+        {learner_persona}. Include relevant examples, code snippets (if 
+        applicable to the {module_topic}), diagrams, or analogies to illustrate 
+        the concepts effectively. Ensure explanations are structured to
+        facilitate effective knowledge checks. Ensure headings are used to 
+        break up the content into logical sections. Headings should be a
+        brief and concise description of the content that will follow.
+    2.  **Create a detailed activity:** Each microlesson should have an 
+        activity of some kind. This could be one of many types of activities 
+        including:
+        - 
+        Transform the preliminary activity idea into a fully
         realized, step-by-step interactive exercise. Ensure the activity directly supports the specific learning
         objective of the microlesson and contributes to the overall module {learning_objectives}. Specify clear,
         actionable deliverables and refine the discussion prompt to be engaging and relevant to the
@@ -195,7 +219,7 @@ learning_design_task:
         interests. These narratives should serve to illustrate complex ideas in an accessible and memorable way,
         as guided by `modular-writing.txt` and the tone defined in `technical-voice.txt`.
 
-    2.  **Create "Aha Moments" through Relatability:** Analyze the technical content for potential points of confusion
+    2.  **Create connections through relatability and build on previous content:** Analyze the technical content for potential points of confusion
         or abstraction. Develop relatable examples or analogies that bridge the gap between the abstract and the
         concrete, helping learners grasp the underlying principles. Refer to `creating-clear-exercises.txt` for
         guidance on building effective and understandable examples.
@@ -227,6 +251,8 @@ learning_design_task:
 
     8. **IMPORTANT - Ensure that no content is lost from the SME's
        content.** The SME's content should be the foundation of the final output. Your task is to **REFINE** the SME output, not cut any of the content provided by the SME. **DO NOT** summarize or cut any of the SME's content, **ONLY** modify it.
+
+    9. **IMPORTANT - The final output should sound like a human wrote it, not a computer.**
 
   expected_output: >
     An enriched Markdown document that builds upon the content provided by the subject_matter_expert. This document
